Add SuperSU link + move ControlCenter to the top
Change-Id: Ib5a674b6ed6e46ffd70a326cc0ee0d59d640f70f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4477,4 +4477,5 @@
 
     <!-- Kat String -->
     <string name="kat_settings">Control Center</string>
+    <string name="su_start">SuperSU settings</string>
 </resources>
