Add SuperSU link + move ControlCenter to the top
Change-Id: Ib5a674b6ed6e46ffd70a326cc0ee0d59d640f70f

Conflicts:
	res/values/strings.xml
	res/xml/settings_headers.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4534,4 +4534,8 @@
 
     <!-- Text to display in regulatory info screen (from device overlay). -->
     <string name="regulatory_info_text"></string>
+
+    <!-- Kat String -->
+    <string name="kat_settings">Control Center</string>
+    <string name="su_start">SuperSU settings</string>
 </resources>
