Add Application Advanced Permissions Management: (AppOps)
Change-Id: Ica7b52bb45ccdf032f6f3b1b63b69282b53dd236

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4538,4 +4538,5 @@
     <!-- Kat String -->
     <string name="kat_settings">Control Center</string>
     <string name="su_start">SuperSU settings</string>
+    <string name="settings_app_ops_title">Apps Advanced Permissions (AppOps)</string>
 </resources>
