--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4539,4 +4539,5 @@
     <string name="kat_settings">Control Center</string>
     <string name="su_start">SuperSU settings</string>
     <string name="settings_app_ops_title">Apps Advanced Permissions (AppOps)</string>
+    <string name="autoparts_dock_settings">Dock Settings</string>
 </resources>
