Add MediaScanner filters in Settings menu
Change-Id: Ic90da45316e13212bcf282e92df98f6eb4a0ef01

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4540,4 +4540,5 @@
     <string name="su_start">SuperSU settings</string>
     <string name="settings_app_ops_title">Apps Advanced Permissions (AppOps)</string>
     <string name="autoparts_dock_settings">Dock Settings</string>
+    <string name="mediascanner_filters">MediaScanner Filters</string>
 </resources>
