--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4541,4 +4541,9 @@
     <string name="settings_app_ops_title">Apps Advanced Permissions (AppOps)</string>
     <string name="autoparts_dock_settings">Dock Settings</string>
     <string name="mediascanner_filters">MediaScanner Filters</string>
+
+    <string name="kk_ui_settings">User Interface Settings</string>
+    <string name="kk_ui_mode">Interface Mode</string>
+    <string name="kk_ui_mode_summary">Choose between TabletUI and PhableUI modes</string>
+
 </resources>
